--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -101,7 +101,7 @@ Wyzwania opisane w rozdziale \ref{const} sugerują, że atrybuty są silnie powi
 Podstawowym celem adnotacji aplikowanych do zmiennych, jest wymuszenie zachowania danych inwariantów.
 W paradygmacie obiektowym ten cel jest zwykle osiągany za pomocą klasy \cite{oop_paradignm}.
 W niektórych językach wspierających ten styl istnieją jednak też modyfikatory typów takie jak \lstinline{const} czy \lstinline{viotile} z C++ bądź \lstinline{mut} z Rust \cite{klabnik2019rust}.
-Te adnotacje są częścią systemu typów i niosą ze sobą pewne informacje semantyczne bądź wymuszają pewne inwarianty, których nie da się wyrazić za pomocą systemu typów.
+Te adnotacje są częścią systemu typów i niosą ze sobą informacje semantyczne bądź wymuszają pewne inwarianty, których nie da się wyrazić za pomocą systemu typów.
 
 Atrybuty z C-=-1, aplikowane do zmiennych i wartości, stanowią odpowiednik tych modyfikatorów, pisany przez użytkownika.
 Przenoszą informacje semantyczne i wymuszają inwarianty.
