--- a/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
+++ b/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
@@ -38,8 +38,8 @@ Kompilacja przez interpretację:\\
 statyczne metaprogramowanie w języku C-=-1
 }
 \engtitle{ % Tytuł po angielsku do angielskiego streszczenia
-    Unnecessarily long and complicated thesis' title \\
-    difficult to read, understand and pronounce
+    Compilation by interpretation:\\
+    static metaprogramming in C-=-1
 }
 \author{Adam Grabski}
 \album{283431}
@@ -52,17 +52,21 @@ statyczne metaprogramowanie w języku C-=-1
 %--------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \streszczenie 
-Statyczne metaprogramowanie jest nowym i dynamicznie rozwijającym się trendem w językach niskiego poziomu.
-Wszystkie tego typu mechanizmy, niosą ze sobą jednak poważne ograniczenia.
-C-=-1 proponuje nowe podejście do konstrukcji kompilatora, umożliwiające wprowadzenie do języka bardzo potężnych mechanizmów metaprogramistycznych. 
-\slowakluczowe XXX, XXX, XXX
+Metaprogramowanie dynamiczne, istniejące w językach zarządzanych, jest narzędziem zwiększającym produktywność programisty i generyczność produkowanego kodu.
+Ten mechanizm niesie ze sobą jednak pewne koszta, nieakceptowalne w niektórych scenariuszach.
+Statyczne metaprogramowanie jest nowym i dynamicznie rozwijającym się trendem w językach niskiego poziomu, który oferuje wiele korzyści dynamicznego metaprogramowania, przenosząc jego koszt na czas kompilacji.
+Obecnie, tego typu mechanizmy, są jednak znacząco ograniczone, w porównaniu z językami zarządzanymi.
+
+C-=-1 proponuje nowe podejście do konstrukcji kompilatora, umożliwiające wprowadzenie do języka bardzo potężnych mechanizmów metaprogramistycznych, bez dodatkowych kosztów w czasie uruchomienia.
+
+\slowakluczowe Metaprogramowanie, Kompilatory, Interpretery, Języki programowania
 
 %--------------------------------------
 % Streszczenie po angielsku
 %--------------------------------------
 \newpage
 \abstract \kant[1-3]
-\keywords Metaprogramowanie, XXX, XXX
+\keywords Metaprogramming, Compilers, Interpreters, Programming languages
 
 %--------------------------------------
 % Oświadczenie o autorstwie
