--- a/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
+++ b/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
@@ -67,12 +67,7 @@ Pomimo tych ograniczeń, udało się zaprezentować użyteczność proponowanych
 W C-=-1 implementacja nowych analizatorów kodu oraz rozszerzeń języka jest łatwa.
 Część kompilatora została napisana w C-=-1.
 Przyśpieszyło to rozwój języka i udowodniło jego funkcjonalność.
-
-Przeprowadzone prace wskazały na szereg okazji do dalszej pracy badawczej.
-Zakres pracy konieczny, aby stworzyć w pełni funkcjonalny język programowania, jest bardzo duży.
-Zaproponowane mechanizmy metaprogramistyczne mają duży wpływ na konstrukcję języka programowania.
-Zarówno składnia, jak i system typów muszą zostać zaprojektowane, aby z nimi współpracować.
-W związku z tym wiele decyzji projektowych, podjętych na początku pracy okazało się błędnych.
+Przeprowadzone prace wskazały wiele kierunków dalszej pracy badawczej.
 
 
 \slowakluczowe Metaprogramowanie, Kompilatory, Interpretery, Języki programowania
@@ -145,20 +140,11 @@ W związku z tym wiele decyzji projektowych, podjętych na początku pracy okaza
 % zapewniając podstawowe formatowanie.
 % //AB
 \vspace{0.8cm}
-\acronymlist
 
 \listoffigurestoc     % Spis rysunków.
 \vspace{1cm}          % vertical space
-\listofappendicestoc  % Spis załączników
 
 % Załączniki
-\newpage
-\appendix{Gramatyka języka C-=-1}
-\label{appendix:grammar}
-\lstinputlisting[
-    breaklines=true,
-    tabsize=2]{../../Grammar/Revision0/CMinusEqualsMinus1Revision0.g4}
-
 
 % Używając powyższych spisów jako szablonu,
 % możesz tu dodać swój własny wykaz bądź listę,
