--- a/Papers/WUT-Master-Thesis/tex/1-wstep.tex
+++ b/Papers/WUT-Master-Thesis/tex/1-wstep.tex
@@ -23,3 +23,8 @@ Nie użyto istniejącego języka, aby ułatwić stworzenie kompilatora.
 Kontynuując tradycję zaczętą przez Bjarne Stroustrup-a nazwa, którą nadano temu nowemu językowi, jest żartem programistycznym. C++ swoją nazwę wziął od jednego ze sposobów na inkrementację zmiennej o nazwie C \cite{stroustrup_com}. 
 W ten sam sposób, w który C++ jest rozwiniętą wersją C, C-=-1 (wymawiane 'cm1') jest nietypową alternatywą dla C++. C-=-1 zostało nazwane na podstawie C++ ponieważ dzieli z nim podstawy filozoficzne oraz niektóre decyzje projektowe. Te podobieństwa zostały opisane w rozdziale 3.
 W ramach prac badawczych zaimplementowano podstawową bibliotekę standardową oraz napisano szereg prostych programów z jej wykorzystaniem. Następnie porównano je z programami, osiągającymi ten sam cel, napisanymi w innych językach programowania, pod kątem złożoności, czytelności i powstałych plików wykonywalnych.
+
+W ramach tej pracy zaprojektowano i zaimplementowano nowy język programowania, jego kompilator oraz bibliotekę standardową.
+W rozdziałach \ref{Language_desig} i \ref{implementation} opisano ten proces.
+Następnie przeprowadzono badania nad jego użytecznością, przez porównanie z innymi językami, co zostało opisane w rozdziale \ref{comparison}.
+
