--- a/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
+++ b/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
@@ -1,4 +1,4 @@
-\section{Wnioski}
+\section{Wnioski z implementacji kompilatora C-=-1}
 
 C-=-1, z oczywistych powodów, pod wieloma wzgęldami jest gorszy od istniejących rozwiązań.
 Wiele udogodnień, traktowanych już jako standard, takich jak dedukcja parametrów generycznych czy semantyka przenoszenia nie zostało zaimplementowanych z powodu braku czasu.
@@ -37,6 +37,7 @@ W rozdziałach \ref{no_discard} oraz \ref{const} przedstawiono przykłady adnota
 Po dodaniu wyjątków trywialną będzie też implementacja atrybutu \lstinline{noexcept}, oznaczającego funkcje, która nigdy nie rzuca.
 
 \subsection{Dyskusja rozwiązania}
+\label{diadvantages}
 
 Zaproponowane podejście niesie ze sobą pewne wady.
 Być możne najpoważniejszą z nich jest utrudniony rozwój kompilatora.
