--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -1,4 +1,4 @@
-\section{Dalsza praca}
+\section{Rozwój języka}
 
 Ta praca oferuje szereg ciekawych wniosków na temat zaproponowanego podejścia do projektowania języków programowania.
 Pozostawia jednak też kilka otwartych pytań.
