--- a/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
+++ b/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
@@ -95,4 +95,17 @@ Yauhen Klimiankou argumentował \cite{Klimiankou:contexpr_great_good_wrong_idea}
 %todo: summarize
 \subsection{Podsumowanie}
 
-Współczesne języki programowania 
+Współczesne języki programowania oferują szeroką gamę mechanizmów metaprogramistycznych.
+Można je szeroko podzielić na dwie kategorie: statyczne oraz dynamiczne.
+Języki zarządzane, takie jak C\# czy Java, oferują głównie metaprogramowanie dynamiczne.
+Struktura programu może być analizowana i modyfikowana w czasie uruchomienia.
+Metaprogramowanie dynamiczne niesie ze sobą koszt w czasie uruchomienia oraz wymaganej pamięci operacyjnej, ale daje też bardzo duże możliwości.
+
+Metaprogramowanie statyczne, występujące w językach takich jak C++, Rust, czy od niedawna C\#, odbywa się całkowicie w czasie kompilacji.
+Nie niesie ze sobą żadnych kosztów w czasie uruchomienia, jednak jest dużo bardziej ograniczone od metaprogramowania dynamicznego.
+Programista ma ograniczone możliwości wglądu w strukturę programu i nie może modyfikować jego istniejących części.
+
+Obecnie nie istnieje język programowania zawierający mechanizmy metaprogramowania statycznego, porównywalne z dynamicznymi.
+Programista, w zależności od wybranego języka, nie może modyfikować istniejących części programu, bądź ma ograniczony wgląd w strukturę programu.
+C-=-1 ma sprawdzić jak uzupełnienie tego braku, wpływa na tworzenie aplikacji.
+
