--- a/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
+++ b/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
@@ -1,10 +1,11 @@
 \section{Wnioski z implementacji kompilatora C-=-1}
 
-C-=-1, z oczywistych powodów, pod wieloma wzgęldami jest gorszy od istniejących rozwiązań.
+Celem C-=-1 nie było jednak zastąpić C++, Rust czy C\#, a zbadać jak priorytetyzacja wsparcia dla statycznego metaprogramowania wpływa na język oraz pisany w nim kod. 
+Pod tym względem, można go uznać za sukces.
+C-=-1, z oczywistych powodów, pod wieloma względami jest gorszy od tych języków.
 Wiele udogodnień, traktowanych już jako standard, takich jak dedukcja parametrów generycznych czy semantyka przenoszenia nie zostało zaimplementowanych z powodu braku czasu.
 Ponadto wsparcie dla C-=-1 jest minimalne: nie istnieje edytor, który koloruje jego składnie, a kompilator oferuje w najlepszym wypadku bardzo podstawową diagnostykę.
-Jego celem nie było jednak zastąpić C++, Rust czy C\#, a zbadać jak priorytetyzacja wsparcia dla statycznego metaprogramowania wpływa na język oraz pisany w nim kod. 
-Pod tym względem, C-=-1 można uznać za sukces.
+Na C-=-1 i narzędziami z nim związanymi, poświęcono niecałe dwa roboczolata, co jest bardzo małym nakładem pracy jak na język programowania.
 
 Wiele aspektów tego języka, zostało niestety omówione wyłącznie na poziomie teoretycznym, ze względu na brak wsparcia kompilatora.
 Stworzenie nowego języka programowania jest zadaniem dużo bardziej złożonym i czasochłonnym niż zakładano na początku tej pracy.
