--- a/Papers/WUT-Master-Thesis/tex/10-closing.tex
+++ b/Papers/WUT-Master-Thesis/tex/10-closing.tex
@@ -19,6 +19,8 @@ Używając tych narzędzi, przeprowadzono następnie badania porównawcze z inny
 
 Pomimo relatywnie niewielkiego, jak na język programowania, nakładu pracy, poniżej dwóch roboczolat, C-=-1 oferuje nowe, ciekawe możliwości.
 Jako język zbudowany wokół metaprogramowania, statyczna analiza kodu, oraz integracja z innymi językami jest dużo łatwiejsza.
+Częścią bibliotek standardowych języka C-=-1 jest pakiet \lstinline{CBindings} umożliwiający generowanie plików nagłówkowych dla języka C.
+Zaimplementowano też atrybut \lstinline{NoDiscard}, stanowiący prosty przykład statycznej analizy kodu.
 Przy większym nakładzie pracy, możliwa byłaby też modyfikacja kodu w trakcie kompilacji, co znacząco zwiększyłoby możliwości języka.
 Nawet w obecnej formie, zaproponowane mechanizmy metaprogramistyczne są użyteczne, co zademonstrowano w rozdziale \ref{comparison}.
 
@@ -33,4 +35,3 @@ C-=-1 wskazuje na użyteczność zaproponowanych mechanizmów metaprogramistyczn
 Język, pomimo braku dojrzałości, jest zdatny do użytku, a atrybuty oferują funkcjonalność przydatną w rozwiązywaniu praktycznych problemów.
 Pełne zbadanie możliwości C-=-1 wymaga dalszej pracy nad kompilatorem.
 
-%todo: jeszcze raz co zrobiono, wady, zalety
