--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -284,7 +284,7 @@ int main() {
 	\end{lstlisting}
 \end{minipage}
 
-CIR jest najbardziej zbliżona do drzewa AST programu.
+CIR jest najbardziej zbliżona do drzewa rozkładu (ang: AST Abstract Syntax Tree) programu.
 Jednak, zamiast bazować na składni programu, ta struktura danych opiera się na jego semantyce.
 Rozważmy fragment kodu C++ w listingu \ref{lst:cpp_overloaded_function}.
 Zawiera on dwa przeciążenia funkcji \lstinline{add}: jedno przyjmujące dwa parametry \lstinline{int} a drugie przyjmujące \lstinline{float}.
