--- a/Papers/ICCC-2023/c-=-1.tex
+++ b/Papers/ICCC-2023/c-=-1.tex
@@ -1,5 +1,5 @@
 %% For double-blind review submission, w/o CCS and ACM Reference (max submission space)
-\documentclass[sigplan,10pt,review,anonymous]{acmart}
+\documentclass[sigplan,10pt]{acmart}
 \settopmatter{printfolios=true,printccs=false,printacmref=false}
 %% For double-blind review submission, w/ CCS and ACM Reference
 %\documentclass[sigplan,review,anonymous]{acmart}\settopmatter{printfolios=true}
@@ -67,11 +67,11 @@
 \title[Short Title]{Compilation through interpretation}         %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
-\titlenote{with title note}             %% \titlenote is optional;
+%\titlenote{with title note}             %% \titlenote is optional;
                                         %% can be repeated if necessary;
                                         %% contents suppressed with 'anonymous'
 \subtitle{CTFE first approach to compiler construction}                     %% \subtitle is optional
-\subtitlenote{with subtitle note}       %% \subtitlenote is optional;
+%\subtitlenote{with subtitle note}       %% \subtitlenote is optional;
                                         %% can be repeated if necessary;
                                         %% contents suppressed with 'anonymous'
 
@@ -88,18 +88,18 @@
 
 %% Author with single affiliation.
 \author{Adam Grabski}
-\authornote{with author1 note}          %% \authornote is optional;
+%\authornote{with author1 note}          %% \authornote is optional;
                                         %% can be repeated if necessary
 \orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \position{Position1}
-  \department{Department1}              %% \department is recommended
-  \institution{Institution1}            %% \institution is required
-  \streetaddress{Street1 Address1}
-  \city{City1}
-  \state{State1}
-  \postcode{Post-Code1}
-  \country{Country1}                    %% \country is recommended
+  \position{Student}
+  \department{Department of Electronics and Information Technology}              %% \department is recommended
+  \institution{Warsaw University of Technology}            %% \institution is required
+  \streetaddress{Nowowiejska 15/19}
+  \city{Warsaw}
+  \state{Mazowieckie}
+  \postcode{00-665}
+  \country{Poland}                    %% \country is recommended
 }
 \email{adam.grabski@stud.pw.edu.pl}          %% \email is recommended
 
@@ -137,7 +137,7 @@
 
 %% Keywords
 %% comma separated list
-\keywords{keyword1, keyword2, keyword3}  %% \keywords are mandatory in final camera-ready submission
+\keywords{compiler, interpreter, metaprogramming}  %% \keywords are mandatory in final camera-ready submission
 
 
 %% \maketitle
