--- a/Papers/ICCC-2023/sections/introduction.tex
+++ b/Papers/ICCC-2023/sections/introduction.tex
@@ -1,1 +1,4 @@
 \section*{Introduction}
+
+Many currently used programming languages allow the programmer to execute some code at compile time, including C\# \cite{csharp:source_generators,roslyn}, Rust \cite{rust, klabnik2019rust} and C++ \cite{ISO:cpp20}.
+
