--- a/Papers/ICCC-2023/sections/introduction.tex
+++ b/Papers/ICCC-2023/sections/introduction.tex
@@ -1,4 +1,7 @@
-\section*{Introduction}
+\section{Introduction}
 
-Many currently used programming languages allow the programmer to execute some code at compile time, including C\# \cite{csharp:source_generators,roslyn}, Rust \cite{rust, klabnik2019rust} and C++ \cite{ISO:cpp20}.
+Compile-time function execution is an aspect of a programming language, that allows the programmer to execute code at compile-time.
+The goals and capabilities of CTFE depend on the language and is discussed in chapter \ref{related-work}, however it plays a secondary role in the compilation process.
 
+CTFE first builds the compiler around the interpreter component.
+The role of the compiler is to construct the semantic model
