--- a/Papers/ICCC-2023/sections/realted-work.tex
+++ b/Papers/ICCC-2023/sections/realted-work.tex
@@ -1,1 +1,4 @@
-\section*{Related work}
+\section{Related work}
+\label{related-work} 
+
+Many currently used programming languages allow the programmer to execute some code at compile time, including C\# \cite{csharp:source_generators,roslyn}, Rust \cite{rust, klabnik2019rust} and C++ \cite{ISO:cpp20}.
