--- a/Papers/ICCC-2023/sections/design.tex
+++ b/Papers/ICCC-2023/sections/design.tex
@@ -1,1 +1,17 @@
 \section{Language and compiler design}
+
+\subsection{Design of C-=-1}
+
+\subsubsection{Type system}
+
+\subsubsection{Attributes and metaprogramming}
+
+\subsection{Design of the compiler}
+
+\subsubsection{Frontend}
+
+\subsubsection{Interpreter}
+
+\subsubsection{Compiler interface}
+
+\subsubsection{Backend}
