--- a/Papers/ICCC-2023/sections/implementation.tex
+++ b/Papers/ICCC-2023/sections/implementation.tex
@@ -1,1 +1,8 @@
 \section{Implementation}
+
+\subsection{Interpreter data structures}
+
+\subsection{Program semantic model}
+
+\subsection{Backend interface}
+
