--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -563,6 +563,13 @@ doi = {10.1109/ISPRAS47671.2019.00007}
   year={1989}
 }
 
+@mastersthesis{grabski2022compilation,
+  title={Compilation through interpretation: static metaprogramming in C-=-1},
+  author={Grabski, Adam},
+  year={2022},
+  school={Warsaw University of Technology}
+}
+
  @misc{wagner_2021, title={Nullable reference types}, url={https://docs.microsoft.com/en-us/dotnet/csharp/nullable-references}, journal={Microsoft Docs}, publisher={Microsoft}, author={Wagner, Bill}, year={2021}, month={Sep}} 
 
 @book{cppTemplatesCompleteGuide,
