--- a/Papers/ICCC-2023/c-=-1.tex
+++ b/Papers/ICCC-2023/c-=-1.tex
@@ -106,6 +106,19 @@
 \email{adam.grabski@stud.pw.edu.pl}          %% \email is recommended
 
 %% Author with two affiliations and emails.
+\author{Ilona Bluemke}
+\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
+\affiliation{
+  \position{Lecturer}
+  \department{Department of Electronics and Information Technology}              %% \department is recommended
+  \institution{Warsaw University of Technology}            %% \institution is required
+  \streetaddress{Nowowiejska 15/19}
+  \city{Warsaw}
+  \state{Mazowieckie}
+  \postcode{00-665}
+  \country{Poland}                    %% \country is recommended
+}
+\email{Ilona.Bluemke@pw.edu.pl}          %% \email is recommended
 
 %% Abstract
 %% Note: \begin{abstract}...\end{abstract} environment must come
